# equant

./: .gitignore  README.md  pyproject.toml  requirements.lm_eval.txt  requirements.txt
scripts/: prepare_model_assets.py  prepare_qwen_assets.py  run_kivi_qa_compare.py  run_kv_bench.py  run_lm_eval.py  run_long_context_eval.py  run_qa_eval.py  setup_env.sh
src/equant/: cache_factories.py  kivi.py  model_assets.py  runtime.py
src/equant.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/equant/benchmarks/: kv_latency.py
src/equant/evals/: lm_eval_backend.py  longbench_eval.py  qa_eval.py
tests/: test_kivi.py  test_qa_eval.py
